[package]
name = "joystick-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.44.0", features = ["Win32_UI_Input", "Win32_Foundation", "Win32_Devices_HumanInterfaceDevice", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi"] }
